--- a/sensor/src/main/res/layout/activity_main.xml
+++ b/sensor/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Medium Text"
+        android:text="This text should change color when you shake the device."
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
