--- a/sensor/src/main/res/layout/activity_main.xml
+++ b/sensor/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
 
     <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:orientation="vertical">
 
       <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This text should change color when you shake the device."
+        android:text="@string/main_text_msg"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
